@@ -1,5 +1,6 @@
 2010-02-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* flickr/api.py: Divided flickr/__init__.py.
 	* plugins/__init__.py, plugins/flickr/__init__.py: Added support
 	  for loading plugins from directories.
 	* flickr.py, base.py: Added support for user name and group name
